modified processed lung data

--- a/MI_VectraPolarisData.html
+++ b/MI_VectraPolarisData.html
@@ -608,7 +608,7 @@ cell_level_lung &lt;- as_tibble(cbind(colData_df,
                 hladr = hladr_opal_690,
                 ck = ck_opal_570) %&gt;%
   dplyr::select(cd14:sample_id, slide_id:tissue_category, cell_id,
-                entire_cell_axis_ratio:entire_cell_area_square_microns)
+                entire_cell_axis_ratio:entire_cell_area_square_microns, contains(&quot;phenotype&quot;))
 
 
 
