--- a/MI_intro.html
+++ b/MI_intro.html
@@ -557,8 +557,7 @@ package</a></li>
 </ul>
 <p>Below are some references that review this rapidly growing area.</p>
 <ul>
-<li><a
-href="https://link.springer.com/protocol/10.1007/978-1-0716-2986-4_8">textbook
+<li><a href="http://juliawrobel.com/Downloads/mIF_chapter.pdf">textbook
 chapter, Wrobel and Vandekar</a></li>
 <li><a href="https://www.mdpi.com/2072-6694/13/12/3031">Challenges and
 Opportunities in the Statistical Analysis of Multiplex
