--- a/index.html
+++ b/index.html
@@ -303,8 +303,64 @@ imaging in R</h1>
 <p>This page contains materials by <a
 href="http://juliawrobel.com/">Julia Wrobel</a> for the short course
 titled “A workshop for analysis of multiplex single-cell imaging data in
-R” held at the University of Michigan on April 6, 2023.</p>
-<p>Acknowledgements here.</p>
+R” held at the University of Michigan Department of Biostatistics on
+April 6, 2023.</p>
+<p><code></code> <code></code></p>
+<div id="acknowledgements" class="section level3">
+<h3>Acknowledgements</h3>
+<p>This work wouldn’t be possible without great collaborators at several
+institutions, including:</p>
+<p><code></code> <code></code></p>
+<div id="university-of-colorado-anschutz-medical-center"
+class="section level4">
+<h4>University of Colorado Anschutz Medical Center</h4>
+<p><strong>Department of Biostatistics Multiplex Imaging
+Group</strong></p>
+<ul>
+<li>Debashis Ghosh</li>
+<li>Thao Vu</li>
+<li>Souvik Seal</li>
+<li>Tushar Ghosh</li>
+<li>Mansooreh Ahmadian</li>
+<li>Ben Steinhart</li>
+</ul>
+<p><strong>School of Medicine</strong></p>
+<ul>
+<li>Kimberly R Jordan</li>
+<li>Elena Hsieh</li>
+<li>Josh Thurman</li>
+<li>Benjamin G Bitler</li>
+<li>Christian Rickert</li>
+<li>Erin Schenk</li>
+</ul>
+<p><code></code> <code></code></p>
+</div>
+<div id="vanderbilt-biostatistics-statistical-imaging-collective"
+class="section level4">
+<h4>Vanderbilt Biostatistics Statistical Imaging Collective</h4>
+<ul>
+<li>Simon Vandekar</li>
+<li>Coleman Harris</li>
+</ul>
+<p><code></code> <code></code></p>
+</div>
+<div id="moffitt-cancer-center" class="section level4">
+<h4>Moffitt Cancer Center</h4>
+<ul>
+<li>Brooke Fridley</li>
+<li>Alex Soupir</li>
+<li>Jose Laborde</li>
+</ul>
+<p><code></code> <code></code></p>
+</div>
+<div id="johns-hopkins-data-science-lab" class="section level4">
+<h4>Johns Hopkins Data Science Lab</h4>
+<ul>
+<li>Stephanie Hicks</li>
+<li>Lukas Weber</li>
+</ul>
+</div>
+</div>
 
 
 
