--- a/index.html
+++ b/index.html
@@ -304,7 +304,10 @@ imaging in R</h1>
 href="http://juliawrobel.com/">Julia Wrobel</a> for the short course
 titled “A workshop for analysis of multiplex single-cell imaging data in
 R” held at the University of Michigan Department of Biostatistics on
-April 6, 2023.</p>
+April 6, 2023. Thanks to <a href="jeffgoldsmith.com">Jeff Goldsmith</a>
+for providing the <a
+href="https://github.com/jeff-goldsmith/ICAMPAM">website
+template</a>.</p>
 <p><code></code> <code></code></p>
 <div id="acknowledgements" class="section level3">
 <h3>Acknowledgements</h3>
