update to acknowledgements

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@ $(document).ready(function () {
   <a href="about.html">About</a>
 </li>
 <li>
-  <a href="http://juliawrobel.com/MI_tutorial/">
+  <a href="https://github.com/julia-wrobel/MI_tutorial">
     <span class="fa fa-github fa-lg"></span>
      
   </a>
@@ -308,12 +308,12 @@ April 6, 2023. Thanks to <a href="jeffgoldsmith.com">Jeff Goldsmith</a>
 for providing the <a
 href="https://github.com/jeff-goldsmith/ICAMPAM">website
 template</a>.</p>
-<p><code></code> <code></code></p>
+<p><br></p>
 <div id="acknowledgements" class="section level3">
 <h3>Acknowledgements</h3>
-<p>This work wouldn’t be possible without great collaborators at several
-institutions, including:</p>
-<p><code></code> <code></code></p>
+<p>I want to acknowledge the following collaborators, without whom this
+work wouldn’t be possible:</p>
+<p><br></p>
 <div id="university-of-colorado-anschutz-medical-center"
 class="section level4">
 <h4>University of Colorado Anschutz Medical Center</h4>
@@ -336,31 +336,32 @@ Group</strong></p>
 <li>Christian Rickert</li>
 <li>Erin Schenk</li>
 </ul>
-<p><code></code> <code></code></p>
+<p><br></p>
 </div>
 <div id="vanderbilt-biostatistics-statistical-imaging-collective"
 class="section level4">
 <h4>Vanderbilt Biostatistics Statistical Imaging Collective</h4>
 <ul>
-<li>Simon Vandekar</li>
+<li><a href="https://simonvandekar.bitbucket.io/">Simon
+Vandekar</a></li>
 <li>Coleman Harris</li>
 </ul>
-<p><code></code> <code></code></p>
+<p><br></p>
 </div>
 <div id="moffitt-cancer-center" class="section level4">
 <h4>Moffitt Cancer Center</h4>
 <ul>
-<li>Brooke Fridley</li>
+<li><a href="https://lab.moffitt.org/fridley/">Brooke Fridley</a></li>
 <li>Alex Soupir</li>
 <li>Jose Laborde</li>
 </ul>
-<p><code></code> <code></code></p>
+<p><br></p>
 </div>
 <div id="johns-hopkins-data-science-lab" class="section level4">
 <h4>Johns Hopkins Data Science Lab</h4>
 <ul>
-<li>Stephanie Hicks</li>
-<li>Lukas Weber</li>
+<li><a href="https://www.stephaniehicks.com/">Stephanie Hicks</a></li>
+<li><a href="https://lmweber.org/">Lukas Weber</a></li>
 </ul>
 </div>
 </div>
