renamed DataCode Data

--- a/MI_intro.html
+++ b/MI_intro.html
@@ -356,7 +356,7 @@ div.tocify {
   <a href="about.html">About</a>
 </li>
 <li>
-  <a href="http://juliawrobel.com/MI_tutorial/">
+  <a href="https://github.com/julia-wrobel/MI_tutorial">
     <span class="fa fa-github fa-lg"></span>
      
   </a>
@@ -429,12 +429,12 @@ library(EBImage)
 
 
 # define your specific file path
-my_path = here::here(&quot;DataCode&quot;)
+my_path = here::here(&quot;Data&quot;)
 
 # define file for different .tif files
-component = here::here(&quot;DataCode&quot;, &quot;lung_component_data.tif&quot;) 
-binseg =  here::here(&quot;DataCode&quot;, &quot;lung_binary_seg_maps.tif&quot;)
-composite_tif = here::here(&quot;DataCode&quot;, &quot;lung.tif&quot;)</code></pre>
+component = here::here(&quot;Data&quot;, &quot;lung_component_data.tif&quot;) 
+binseg =  here::here(&quot;Data&quot;, &quot;lung_binary_seg_maps.tif&quot;)
+composite_tif = here::here(&quot;Data&quot;, &quot;lung.tif&quot;)</code></pre>
 <p>The subject and image ID are embedded in the file name. For example,
 for the file “#12 2-690-981 P44_[48428,17215].tif”, “12 2-690-981” is
 the subject id, and “48428,17215” is the image ID.</p>
