--- a/MI_Data.html
+++ b/MI_Data.html
@@ -33,7 +33,6 @@
 <link href="site_libs/tocify-1.9.1/jquery.tocify.css" rel="stylesheet" />
 <script src="site_libs/tocify-1.9.1/jquery.tocify.js"></script>
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
-<script src="site_libs/navigation-1.1/codefolding.js"></script>
 <link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
 <link href="site_libs/font-awesome-6.2.1/css/all.min.css" rel="stylesheet" />
@@ -222,9 +221,6 @@ $(document).ready(function () {
 </style>
 
 <!-- code folding -->
-<style type="text/css">
-.code-folding-btn { margin-bottom: 4px; }
-</style>
 
 
 
@@ -360,7 +356,7 @@ div.tocify {
   <a href="about.html">About</a>
 </li>
 <li>
-  <a href="http://juliawrobel.com/MI_tutorial/">
+  <a href="https://github.com/julia-wrobel/MI_tutorial">
     <span class="fa fa-github fa-lg"></span>
      
   </a>
@@ -372,14 +368,6 @@ div.tocify {
 
 <div id="header">
 
-<div class="btn-group pull-right float-right">
-<button type="button" class="btn btn-default btn-xs btn-secondary btn-sm dropdown-toggle" data-toggle="dropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span>Code</span> <span class="caret"></span></button>
-<ul class="dropdown-menu dropdown-menu-right" style="min-width: 50px;">
-<li><a id="rmd-show-all-code" href="#">Show All Code</a></li>
-<li><a id="rmd-hide-all-code" href="#">Hide All Code</a></li>
-</ul>
-</div>
-
 
 
 <h1 class="title toc-ignore">Data</h1>
@@ -387,14 +375,36 @@ div.tocify {
 </div>
 
 
-<p>Two datasets will be used in the short course. They are below with
-brief descriptions.</p>
-<div id="ovarian-cancer" class="section level2">
-<h2>Ovarian cancer</h2>
-<p>DESCRIPTION AND DATA TO COME.</p>
+<p>Two datasets will be used in the short course, both available as part
+of the <code>VectraPolarisData</code> package on Bioconductor. I also
+provide processed versions of these datasets as <code>.rdata</code>
+objects, and an exampled <code>.tiff</code> image from the lung cancer
+dataset.</p>
+<p>They are below with brief descriptions.</p>
+<div id="ovarian-cancer-data" class="section level2">
+<h2>Ovarian cancer data</h2>
+<p>This is a segmented and phenotyped multiplex immunoflurescence
+dataset of tumor microarray images of high grade serous ovarian cancer,
+used in <a
+href="https://aacrjournals.org/mcr/article/19/12/1973/675069/The-Spatial-Context-of-Tumor-Infiltrating-Immune">this
+study</a>. The full data are part of the <code>VectraPolarisData</code>
+package.</p>
+<p>A cleaned version of the data can be found <a
+href="./Data/ovarian.RDA">here</a>.</p>
 </div>
 <div id="lung-cancer" class="section level2">
 <h2>Lung cancer</h2>
+<p>This is a segmented and phenotyped multiplex immunoflurescence
+dataset of non small cell lung carcinoma tissue, used in <a
+href="https://pubmed.ncbi.nlm.nih.gov/34048945/">this study</a>. The
+full data are part of the <code>VectraPolarisData</code> package, and
+contain multiple regions of interest (ROIs) for each subject.</p>
+<p>A cleaned version of the data can be found <a
+href="./Data/lung.RDA">here</a>.</p>
+<p>An example multichannel tiff image can be found <a
+href="lung_component_data.tif">here</a>, with binary segmentation maps
+<a href="lung_binary_seg_maps.tif">here</a>, and a composite image <a
+href="lung.tif">here</a>.</p>
 </div>
 
 
@@ -432,11 +442,6 @@ $(document).ready(function () {
 </script>
 
 <!-- code folding -->
-<script>
-$(document).ready(function () {
-  window.initializeCodeFolding("hide" === "show");
-});
-</script>
 
 <script>
 $(document).ready(function ()  {
