updated data filepaths

--- a/MI_Data.html
+++ b/MI_Data.html
@@ -402,9 +402,9 @@ contain multiple regions of interest (ROIs) for each subject.</p>
 <p>A cleaned version of the data can be found <a
 href="./Data/lung.RDA">here</a>.</p>
 <p>An example multichannel tiff image can be found <a
-href="lung_component_data.tif">here</a>, with binary segmentation maps
-<a href="lung_binary_seg_maps.tif">here</a>, and a composite image <a
-href="lung.tif">here</a>.</p>
+href="./Data/lung_component_data.tif">here</a>, with binary segmentation
+maps <a href="./Data/lung_binary_seg_maps.tif">here</a>, and a composite
+image <a href="./Data/lung.tif">here</a>.</p>
 </div>
 
 
